kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pod
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
